--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.mariosg92.yourclassapp">
+    package="com.mariosg92.yourclassapp" >
 
     <application
         android:allowBackup="true"
@@ -8,17 +8,21 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.YourClassApp">
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".HomeActivity" />
+        android:theme="@style/Theme.YourClassApp" >
+        <activity
+            android:name=".HomeActivity"
+            android:label="@string/title_activity_home"
+            android:theme="@style/Theme.YourClassApp.NoActionBar" >
+        </activity>
+        <activity android:name=".MainActivity" />
         <activity android:name=".DoneActivity" />
         <activity android:name=".RecoveryActivity" />
         <activity android:name=".LoginActivity" />
         <activity android:name=".RegisterActivity" />
-        <activity
-            android:name=".LoadSplashActivity">
+        <activity android:name=".LoadSplashActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
