--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.firebase:firebase-auth:19.2.0'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.1'
     implementation 'org.jetbrains:annotations:15.0'
     implementation 'com.google.firebase:firebase-firestore:22.1.2'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
