Commit 30/05/2021  - Added delete Alumno for AlumnoDetalleActivity and update RecyclerView from Fragment  - Added util class TinyDB for easier use of SharedPreferences  - Fixed errors

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.YourClassApp">
-        <activity android:name=".LoginAlumnosActivity"></activity>
+        <activity
+            android:name=".AlumnoTabActivity"
+            android:label="@string/title_activity_alumno_tab"
+            android:theme="@style/Theme.YourClassApp.NoActionBar"></activity>
+        <activity android:name=".LoginAlumnosActivity" />
         <activity
             android:name=".AlumnoDetalleActivity"
             android:screenOrientation="portrait" />
